--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.HikerManagementApp"
         tools:targetApi="31" >
         <activity
-            android:name=".Edit"
+            android:name=".EditActivity"
             android:exported="false" />
         <activity
             android:name=".edit"
