--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,19 +13,22 @@
         android:theme="@style/Theme.HikerManagementApp"
         tools:targetApi="31">
         <activity
-            android:name=".ViewObservation"
+            android:name=".edit"
             android:exported="false" />
         <activity
-            android:name=".EditActivity"
+            android:name=".activity.ViewObservationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.EditActivity"
             android:exported="false" />
         <activity
             android:name=".Edit"
             android:exported="false" />
         <activity
-            android:name=".AddObservation"
+            android:name=".activity.AddObservationActivity"
             android:exported="false" />
         <activity
-            android:name=".ViewActivity"
+            android:name=".activity.ViewActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
